Archive2/7f/e944338b60a215/output
main.cpp:22:20: error: expected ';' at end of declaration
    ifstream myfile.open ("messageBoard.txt");
                   ^
                   ;
main.cpp:23:21: error: expected ';' at end of declaration
    ofstream results.open ("results.txt");
                    ^
                    ;
main.cpp:27:4: error: unknown type name 'myfile'
   myfile >> getline(myfile, buy[w], '\n');
   ^
main.cpp:27:11: error: expected unqualified-id
   myfile >> getline(myfile, buy[w], '\n');
          ^
main.cpp:28:9: error: expected unqualified-id
        if
        ^
main.cpp:34:9: error: expected unqualified-id
        while(myfile, line)
        ^
main.cpp:43:9: error: expected unqualified-id
        while(myfile, line)
        ^
main.cpp:52:4: error: expected unqualified-id
   for(w=0; w<100; w++)
   ^
main.cpp:67:5: error: unknown type name 'results'
    results.close();
    ^
main.cpp:67:12: error: cannot use dot operator on a type
    results.close();
           ^
main.cpp:68:1: error: expected unqualified-id
return 0;
^
main.cpp:69:1: error: extraneous closing brace ('}')
}
^
12 errors generated.
